--- a/launch-galaxy.yml
+++ b/launch-galaxy.yml
@@ -11,6 +11,7 @@ services:
       - ./galaxy-tools:/galaxy/server/tools/
       - ./galaxy-config/tool_conf.xml:/galaxy/server/config/tool_conf.xml.sample
       - ./galaxy-config/job_conf.xml:/galaxy/server/config/job_conf.xml.sample_basic
+      - ./galaxy-config/welcome.html:/galaxy/server/static/welcome.html
       - ./galaxy-config/galaxy.yml:/galaxy/server/config/galaxy.yml 
       - /var/run/docker.sock:/var/run/docker.sock:ro
       
