--- a/galaxy-config/galaxy.yml
+++ b/galaxy-config/galaxy.yml
@@ -7,6 +7,9 @@ gravity:
   reports:
 
 galaxy:
+  admin_users:
+   - admin@hotmail.co.uk
+   - admin2@email.org
   builds_file_path: /galaxy/server/tool-data/shared/ucsc/builds.txt.sample
   container_resolvers_config_file: ''
   data_dir: /galaxy/server/database
@@ -31,5 +34,4 @@ galaxy:
   tool_sheds_config_file: /galaxy/server/config/tool_sheds_conf.xml.sample
   ucsc_build_sites: /galaxy/server/tool-data/shared/ucsc/ucsc_build_sites.txt.sample
   visualization_plugins_directory: config/plugins/visualizations
-  admin_users: admin@hotmail.co.uk
   cleanup_job: never
