--- a/launch-galaxy.yml
+++ b/launch-galaxy.yml
@@ -13,6 +13,8 @@ services:
       - ./galaxy-config/job_conf.xml:/galaxy/server/config/job_conf.xml #.sample_basic
       - ./galaxy-config/welcome.html:/galaxy/server/static/welcome.html
       - ./galaxy-config/galaxy.yml:/galaxy/server/config/galaxy.yml 
+      - ./galaxy-config/mcfe_datatypes.py:/galaxy/server/lib/galaxy/datatypes/mcfe_datatypes.py
+      - ./galaxy-config/datatypes_conf.xml:/galaxy/server/config/datatypes_conf.xml
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /galaxy/server/database:/galaxy/server/database
       
